[gd_scene load_steps=13 format=3 uid="uid://clt46dfsfi303"]

[ext_resource type="Script" path="res://main_scenes/main_menu.gd" id="1_pm3uy"]
[ext_resource type="Theme" uid="uid://cctaube7xhp23" path="res://main_theme.tres" id="2_msamo"]
[ext_resource type="FontFile" uid="uid://bj2u2p57factd" path="res://assets/fonts/ThaleahFat.ttf" id="3_ygo1t"]
[ext_resource type="PackedScene" path="res://ui/current_user_display.tscn" id="4_jt0m5"]
[ext_resource type="Shader" path="res://vhs_shader.gdshader" id="5_xrfx6"]

[sub_resource type="Gradient" id="Gradient_sgfof"]
colors = PackedColorArray(0.929688, 0.688248, 0.864423, 1, 0.641945, 0.556286, 0.75, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6051y"]
gradient = SubResource("Gradient_sgfof")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0spsw"]
texture = SubResource("GradientTexture2D_6051y")
region_rect = Rect2(0, 0, 256, 256)

[sub_resource type="LabelSettings" id="LabelSettings_xgjfw"]
font = ExtResource("3_ygo1t")
font_size = 130
font_color = Color(0.878431, 1, 0.831373, 1)
outline_size = 16
outline_color = Color(1, 0.286275, 0.466667, 1)
shadow_size = 12
shadow_color = Color(0.027451, 0.0196078, 0.0235294, 1)
shadow_offset = Vector2(7, 7)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b8x7d"]
resource_local_to_scene = true
shader = ExtResource("5_xrfx6")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.005
shader_parameter/scanlines_width = 0.081
shader_parameter/grille_opacity = 0.005
shader_parameter/resolution = Vector2(1024, 768)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 3.0
shader_parameter/roll_size = 6.195
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.001
shader_parameter/noise_opacity = 0.01
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.022
shader_parameter/aberration = 0.00400005
shader_parameter/brightness = 0.9
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.031
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.132

[sub_resource type="Gradient" id="Gradient_32a84"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8s3q7"]
gradient = SubResource("Gradient_32a84")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pm3uy")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("2_msamo")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0spsw")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ygo1t")
text = "shotbox"
label_settings = SubResource("LabelSettings_xgjfw")
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="ManageProfilesButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "PROFILES"

[node name="QuitButton" type="Button" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "QUIT"

[node name="CurrentUserDisplay" parent="Control" instance=ExtResource("4_jt0m5")]
layout_mode = 1

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2

[node name="ScreenSpaceShader" type="TextureRect" parent="CanvasLayer2/Control"]
material = SubResource("ShaderMaterial_b8x7d")
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = SubResource("GradientTexture1D_8s3q7")

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/ManageProfilesButton" to="." method="_on_manage_profiles_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
